# lumen-blocks

./: Cargo.toml  README.md  justfile  shell.nix
.devcontainer/: README.md  devcontainer.env
.github/workflows/: ci.yml
blocks/: Cargo.toml  tailwind.config.js  tailwind.css
blocks/assets/: tailwind.css
blocks/examples/: button_example.rs  form_example.rs  hover_card_example.rs  main.rs  menubar_example.rs  side_sheet_example.rs  toast_example.rs
blocks/src/: lib.rs
blocks/src/components/: accordion.rs  aspect_ratio.rs  avatar.rs  button.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown.rs  hover_card.rs  input.rs  label.rs  menubar.rs  mod.rs  progress.rs  side_sheet.rs  switch.rs  toast.rs
docs-router/: Cargo.toml  build.rs
docs-src/0.1/src/: index.md
docsite/: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js  tailwind.css
docsite/assets/: tailwind.css
docsite/docs/: Cargo.toml  build.rs
docsite/docs/docs-src/0.1/src/: SUMMARY.md  index.md
docsite/docs/docs-src/0.1/src/button/: index.md
docsite/docs/docs-src/0.1/src/checkbox/: index.md
docsite/docs/docs-src/0.1/src/collapsible/: index.md
docsite/docs/docs-src/0.1/src/context-menu/: index.md
docsite/docs/docs-src/0.1/src/hover-card/: index.md
docsite/docs/docs-src/0.1/src/installation/: index.md
docsite/docs/docs-src/0.1/src/menubar/: index.md
docsite/docs/docs-src/0.1/src/progress/: index.md
docsite/docs/docs-src/0.1/src/side-sheet/: index.md
docsite/docs/docs-src/0.1/src/switch/: index.md
docsite/docs/docs-src/src/: SUMMARY.md
docsite/docs/docs-src/src/installation/: index.md
docsite/docs/docs-src/src/migration-notes/: index.md
docsite/docs/src/: docs.rs
docsite/docs/src/doc_examples/: accordion_examples.rs  avatar_examples.rs  button_examples.rs  checkbox_examples.rs  collapsible_examples.rs  context_menu_examples.rs  dropdown_examples.rs  form_examples.rs  hover_card_examples.rs  menubar_examples.rs  mod.rs  progress_examples.rs  side_sheet_examples.rs  switch_examples.rs  toast_examples.rs
docsite/src/: main.rs
docsite/src/components/: cards.rs  component_section.rs  docs_layout.rs  form_demo.rs  layout.rs  main_layout.rs  main_stats_card.rs  mod.rs  navbar.rs  progress_demo.rs  project_detail_card.rs  showcase.rs  toast_demo.rs
docsite/src/layouts/: docs_layout.rs  main_layout.rs  mod.rs
docsite/src/pages/: components.rs  dashboard.rs  err_404.rs  home.rs  mod.rs  settings.rs  team.rs
preview/: Cargo.toml
preview/src/: main.rs
sample-app/: Cargo.toml  README.md  tailwind.config.js  tailwind.css
sample-app/assets/: tailwind.css
sample-app/src/: main.rs
sample-app/src/components/: cards.rs  mod.rs  team_member_card.rs
sample-app/src/pages/: dashboard.rs  mod.rs  projects.rs
