[package]
name = "lumen-blocks"
version = "0.1.1"
edition = "2024"
description = "Accessible, styled, opinionated components for Dioxus inspired by the shadcn UI and built on Dioxus Primitives"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "shadcn", "tailwind"]
categories = ["gui", "wasm"]
authors = ["Daniel D’Aquino <daniel@daquino.me>"]
license = "MIT"
homepage = "https://lumenblocks.dev"
repository = "https://github.com/Leaf-Computer/lumen-blocks"

[dependencies]
dioxus-lib.workspace = true
dioxus-time.workspace = true
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives", rev = "8d21a6b60b2cfd73dba569f33f5ca2bdd16d2f38" }
tracing.workspace = true
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }
log = "0.4"

[dev-dependencies]
dioxus.workspace = true
env_logger = "0.10"
