[package]
name = "docsite"
version = "0.1.1"
authors = ["Daniel D’Aquino <daniel@daquino.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["router"] }
lumen-blocks.workspace = true
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }
dioxus-time.workspace = true
docs.workspace = true
mdbook-shared.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
analytics = []
