[package]
name = "sample-app"
version = "0.1.0"
authors = ["Daniel D’Aquino <daniel@daquino.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["router"] }
laminar-blocks.workspace = true
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }
dioxus-time = "=0.1.0-alpha.1"
mdbook-gen = { git = "https://github.com/DioxusLabs/docsite.git", rev = "ab5e121b9a9e022cecdfd35f55af3cac993fb5fb" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
