[package]
name = "docs"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
use-mdbook = { workspace = true }
dioxus = { workspace = true, features = ["router"] }
mdbook-shared = { workspace = true }
lumen-blocks.workspace = true
lucide-dioxus = { workspace = true, features = ["all-icons"] }

[build-dependencies]
mdbook-gen = { workspace = true, features = ["manganis"] }
mdbook-shared = { workspace = true }
dioxus-autofmt = { version = "0.6.0" }
prettyplease = "0.2.36"
syn = { workspace = true }
